<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fr3_control</name>
  <version>0.0.1</version>
  <description>Control and MoveIt Servo configuration for Franka FR3 teleoperation.</description>
  <maintainer email="raularjonaarmisen@gmail.com">Raul Arjona</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_servo</depend>
  <depend>geometry_msgs</depend>
  <depend>franka_description</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
